# OpenGL-Base

./: CMakeLists.txt  README.md
res/Shaders/: default.frag  default.vert
src/: CMakeLists.txt  config.h  main.cpp  util.h
src/Engine/: CMakeLists.txt  ECManager.h  Engine.cpp  Engine.h  Entity.h  Scene.cpp  Scene.h
src/Game/: CMakeLists.txt  Scenes.cpp  Scenes.h
src/Input/: CMakeLists.txt  CameraController.cpp  CameraController.h
src/Rendering/: CMakeLists.txt  Renderer.cpp  Renderer.h  WindowManager.cpp  WindowManager.h
src/Rendering/Objects/: CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Lights.cpp  Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderObject.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Rendering/Parsing/: CMakeLists.txt  ObjParser.cpp  ObjParser.h
src/Rendering/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
